<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTenMonAnThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/size5dp"
            android:text="@string/tenmonanhd"
            android:textSize="@dimen/size12sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvSoLuongThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size5dp"
            android:text="@string/soluongmonanhd"
            android:textSize="@dimen/size12sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvGiaTienThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size5dp"
            android:layout_gravity="center_vertical"
            android:text="@string/dongia"
            android:textSize="@dimen/size12sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvThanhTienMonAnThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size5dp"
            android:layout_gravity="center_vertical"
            android:text="@string/thanhtien"
            android:textSize="@dimen/size12sp"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>