<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNgayThanhToanHD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size5dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/size5dp"
            android:text="@string/ngaythanhtoan"
            android:textSize="@dimen/size12sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvTenBanAnHD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size5dp"
            android:text="@string/banan"
            android:textSize="@dimen/size12sp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvTenNhanVienHD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/size15dp"
            android:text="@string/nhanvienthanhtoan"
            android:textSize="@dimen/size12sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvTongTienHD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/size15dp"
            android:text="@string/tongtienhoadon"
            android:textSize="@dimen/size12sp"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>