<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size150dp"
        android:background="@drawable/bg_navigation">

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cvDSChiTietHoaDon"
        android:layout_width="@dimen/size300dp"
        android:layout_height="@dimen/size510dp"
        android:layout_marginTop="@dimen/size40dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="@dimen/size2dp"
        app:cardElevation="@dimen/size5dp">

        <ImageView
            android:layout_width="@dimen/size25dp"
            android:layout_height="@dimen/size25dp"
            android:layout_marginTop="@dimen/size10dp"
            android:src="@drawable/logolechef"
            android:layout_marginLeft="@dimen/size240dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tvChiTietHoaDon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10dp"
                android:text="@string/chitiethoadon"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:textSize="@dimen/size18sp"/>

            <TextView
                android:id="@+id/tvLeChefRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10dp"
                android:layout_below="@+id/tvChiTietHoaDon"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/nhahangphap"
                android:textSize="@dimen/size13sp" />

            <View
                android:layout_below="@+id/tvLeChefRestaurant"
                android:id="@+id/tvmins"
                android:layout_width="@dimen/size75dp"
                android:layout_height="@dimen/size2dp"
                android:layout_marginTop="2dp"
                android:layout_centerHorizontal="true"
                android:background="@color/darkgray"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size110dp">

            <LinearLayout
                android:id="@+id/lnTongTien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvTongTien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thanhtien"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/overlay_black"
                    android:textSize="@dimen/size30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vnd"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="@dimen/size22sp"
                    android:textColor="@color/overlay_black"
                    android:layout_marginLeft="@dimen/size10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/lnTongTien"
                android:id="@+id/lnTieuDeHoaDon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size22dp"
                android:layout_marginTop="@dimen/size10dp"
                android:orientation="horizontal"
                android:background="@color/silver">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tenmonanhd"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textColor="@color/darkgray"
                    android:textSize="@dimen/size12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/soluongmonanhd"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/darkgray"
                    android:textStyle="bold"
                    android:textSize="@dimen/size12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dongia"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/darkgray"
                    android:textStyle="bold"
                    android:textSize="@dimen/size12sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/thanhtienmonanhd"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/darkgray"
                    android:textStyle="bold"
                    android:textSize="@dimen/size12sp"
                    android:layout_weight="1"/>


            </LinearLayout>

            <GridView
                android:layout_below="@+id/lnTieuDeHoaDon"
                android:id="@+id/gvThanhToan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size245dp"
                android:numColumns="1">
            </GridView>

            <ImageButton
                android:layout_below="@+id/gvThanhToan"
                android:id="@+id/btnThanhToanHD"
                android:layout_width="@dimen/size50dp"
                android:layout_height="@dimen/size50dp"
                android:layout_marginTop="@dimen/size12dp"
                android:layout_centerHorizontal="true"
                android:background="@color/transparent"
                android:src="@drawable/ic_paymment"
                android:scaleType="centerCrop"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>