<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size150dp"
        android:background="@drawable/bg_navigation">

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/size300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size85dp">

        <ImageView
            android:layout_width="@dimen/size25dp"
            android:layout_height="@dimen/size25dp"
            android:layout_marginTop="@dimen/size10dp"
            android:src="@drawable/logolechef"
            android:layout_marginLeft="260dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size15dp"
            android:layout_marginBottom="@dimen/size10dp">

            <TextView
                android:id="@+id/tvDanhSachLoaiThucDon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/danhsachhoadon"
                android:textSize="@dimen/size15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLeChefRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10dp"
                android:layout_below="@+id/tvDanhSachLoaiThucDon"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/nhahangphap"
                android:textSize="@dimen/size12sp" />

            <View
                android:layout_below="@+id/tvLeChefRestaurant"
                android:id="@+id/tvline"
                android:layout_width="@dimen/size75dp"
                android:layout_height="@dimen/size2dp"
                android:layout_marginTop="2dp"
                android:layout_centerHorizontal="true"
                android:background="@color/darkgray"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvDSChiTietHoaDon"
        android:layout_width="@dimen/size365dp"
        android:layout_height="@dimen/size420dp"
        android:layout_marginTop="@dimen/size185dp"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lnTieuDe"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/overlay_darkgray">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ngaythanhtoan"
                    android:layout_marginTop="@dimen/size3dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size11sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size3dp"
                    android:text="@string/mahoadon"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size11sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size3dp"
                    android:text="@string/banan"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size11sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size3dp"
                    android:text="@string/nhanvientt"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size11sp"
                    android:textStyle="bold"                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size3dp"
                    android:text="@string/tongtienhoadon"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size11sp"
                    android:textStyle="bold"                    />

            </LinearLayout>

            <GridView
                android:layout_below="@+id/lnTieuDe"
                android:id="@+id/gvDanhSachHoaDon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size15dp"
                android:numColumns="1">
            </GridView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>